# solscan_mcp_server

./: Dockerfile  README.md  pyproject.toml
src/solscan_mcp_server/: api.py  server.py
tests/: test_api.py  test_server.py
